# MEMPHYS

./: README  history  index.html  table.html
MEMPHYS/: Analysis.hh  Cast.hh  DetectorConstruction.hh  DigitsCollectionAccessor.h~  EventAction.hh  Event_tree_h.icc  Geometry_tree_h.icc  IAppManager.hh  WCDigitizer.hh  event_tree_h.icc
MEMPHYS/cmake/: CMakeLists.txt  README
applications/: HitsCollectionAccessor.cxx  MEMPHYS_analysis.cxx  MEMPHYS_analysis_ROOT.cxx  MEMPHYS_analysis_ROOT.cxx~  MEMPHYS_analysis_aida_ROOT.cxx  MEMPHYS_analysis_aida_ROOT.cxx~  MEMPHYS_batch.cxx  MEMPHYS_session.cxx  all_ROOT.cpp  analysis.icc  batch.cxx  geom_ROOT.cpp  plot.cpp  plot.cxx  plot_ROOT.cxx  read.icc  read_plot.cpp  sim.cpp  sim.cxx
bush/: add_field_desc_node_class  and_app_res  and_build  app_README  app_distrib  app_install  app_name  app_pack  app_pch  app_run  app_trailer  app_trailer_use  application  archive  args  auto_use  branch_release  check_app  compare_png  compile  compile_c  compile_cpp  compile_f77  compile_one_cpp  darwin_app  ecpp  exec_app  find_lib  find_rm  git_init  gource  guess_compiler  header  header_app  ios_app_res  lines  make_icons  on_where  ourex_args  ourex_generic  (+11 more)
cmt/: README  cleanup.csh  cleanup.sh  cmt_make_shlib_common.sh  meta_setup.csh  meta_setup.sh  requirements  requirements~  setup.csh  setup.sh  slc5_gcc412.make
doc/: README  README_build
html/: build_8h.html  build_8h_source.html  dir_c3a3ee36a1e03ad614258ece27f46d29.html  download_8h.html  download_8h_source.html  euronunet_8h.html  euronunet_8h_source.html  files.html  github_8h.html  github_8h_source.html  input__memphys_8h.html  input__memphys_8h_source.html  introduction_8h.html  introduction_8h_source.html  iridium_8h.html  iridium_8h_source.html  memphys_build.html  memphys_download.html  memphys_euronunet.html  memphys_input_memphys.html  memphys_introduction.html  (+8 more)
(+776 files in other folders)
